<resources>
    <string name="app_name">biubiu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_tab">ActivityTab</string>
    <string name="nearby">附近</string>
    <string name="topic">版块</string>
    <string name="message">消息</string>
    <string name="me">我</string>
    <string name="gotLike">我得到的赞</string>
    <string name="zero">0</string>
    <string name="ge">个</string>
    <string name="myQusestion">我的奇思</string>
    <string name="myAnswer">我的妙答</string>
    <string name="userBeyondPercent">超过当前区域%1$d%%的 biubiu 客</string>
    <string name="title_activity_question">详情</string>
    <string name="bestAnswerHere">妙答在此~</string>
    <string name="send">发送</string>
    <string name="anonymity">匿名</string>
    <string name="distance">%1$skm</string>
    <string name="topicCount">今天有%1$d条内容</string>
    <string name="tagDistance">距</string>
    <string name="tagSchool">校</string>
    <string name="lookAround">随便看看</string>
    <string name="mine">我的</string>
    <string name="title_activity_publish">奇思妙想</string>
    <string name="signName">--署名</string>
    <string name="title_activity_activity_setting">设置</string>
    <string name="userFeedback">用户反馈</string>
    <string name="aboutUs">关于biubiu</string>
    <string name="contactUs">联系我们</string>
    <string name="userTerms">用户协议</string>
    <string name="publishHint">你有什么奇思妙想? 和小伙伴们互动一下吧~</string>
    <string name="publish">发布</string>
    <string name="publish_at_leasst">发表的字数不能少于5个~</string>
    <string name="publishSuccess">发布成功</string>
    <string name="saySomething">总得说些什么吧~</string>
    <string name="title_activity_my_q">ActivityMyQA</string>
    <string name="title_activity_activity_feedback">用户反馈</string>
    <string name="title_activity_activity_about">关于biubiu</string>
    <string name="title_activity_activity_contact_us">联系我们</string>
    <string name="companyInfo">官网 : biubiu.co\n微博: 二三三三个问题</string>
    <string name="copyRight">Copyright(c) 2015年 深圳云开日出科技有限公司.</string>
    <string name="title_activity_activity_terms">用户协议</string>
    <string name="feedback_tips">您的建议是我们进步的动力~</string>
    <string name="feedback_success">谢谢您的宝贵意见</string>
    <string name="replyCount">%1$d 回复</string>
    <string name="title_activity_activity_random_topic">随便看看</string>
    <string name="title_activity_activity_create_union">创建版块</string>
    <string name="setUnionIcon">设置个性版块图片</string>
    <string name="inputUnionName">输入你的版块名称(10个汉字以内)</string>
    <string name="createUnion">创建版块</string>
    <string name="craeteUnionWarning">创建版块是件严肃的事情, 创建后不能修改</string>
    <string name="editMax">200</string>
    <string name="noRelText">没有关联的信息</string>
    <string name="qLike">你的奇思得到一个新赞</string>
    <string name="commentLike">你的妙答得到了一个新赞</string>
    <string name="unionPass">你申请创建的版块已通过审核,快去看看吧</string>
    <string name="unionBlock">你申请创建的版块未能通过审核, 可以重新申请创建</string>
    <string name="title_activity_activity_union_topic">版块</string>
    <string name="prepareReply">回复</string>
    <string name="reportAbuse">举报</string>
    <string name="reportSuccess">举报成功</string>
    <string name="replyFloor">回复%1$d楼</string>
    <string name="confirm">确定</string>
    <string name="uploadImagePlease">请设置需要上传的版块图片</string>
    <string name="submitted">申请已提交,等待审核</string>
    <string name="titleWait">请等待</string>
    <string name="submittingData">正在提交数据</string>
    <string name="needMoreLike">需要获得更多biubiu客的赞才能创建版块哦~</string>
    <string name="unknownLoc">火星</string>
    <string name="commentCome">还没有评论, 留个言弹一发?</string>
    <string name="danmuComming">一大波评论即将到来→_→</string>
    <string name="replyFloorAt">回复 %1$d楼: %2$s</string>
    <string name="title_activity_activity_skip_test">ActivitySkipTest</string>
    <string name="deleteSuccess">删除成功</string>
    <string name="title_activity_activity_test">ActivityTest</string>
    <string name="refresh_location">正在更新地理位置信息</string>
    <string name="myUnion">我的版块</string>
    <string name="push">推送</string>
    <string name="nearby_empty">附近没有数据</string>
    <string name="unionEmpty">没有版块信息</string>
    <string name="emptyMsg">没有消息</string>
    <string name="emptyMyA">没有回答过问题哦~</string>
    <string name="emptyMyQ">没有提出的问题哦~</string>
    <string name="title_activity_my_union">我的版块</string>
    <string name="youHasNoUnion">你沒有创建版块哦~</string>
    <string name="data_error">数据异常</string>
    <string name="no_topic">没有话题, 发布一个吧~</string>
    <string name="pushSwitch">新消息通知</string>
    <string name="delete">删除</string>
</resources>
