<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/teal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dfPadding"
        android:paddingBottom="@dimen/dfPadding">

        <TextView
            android:paddingLeft="@dimen/dfPadding"
            android:text="@string/gotLike"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:text="@string/zero"
                android:id="@+id/getLikeCount" />

            <TextView
                android:textColor="#ffffff"
                android:layout_marginLeft="@dimen/dfPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ge" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="20dip"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/bg_percent"
            android:id="@+id/percent" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_marginLeft="50dip"
            android:layout_marginRight="50dip"
            android:max="100"
            android:progress="0"
            android:layout_gravity="center_horizontal"
            android:indeterminate="false" />

        <TextView
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="@dimen/dfPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percentText" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dfPadding"
        android:paddingLeft="@dimen/dfPadding"
        android:paddingRight="@dimen/dfPadding"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/meList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>